# MickHargraves

./: .gitignore  Black Eyes and Broken Souls (v1).odt  Black Eyes and Broken Souls.epub  Black Eyes and Broken Souls.odt  Black Eyes and Broken Souls.odt.bak  Blood Tithe (v2).odt  Blood Tithe (v2).odt.bak  Blood Tithe (v3).odt  Blood Tithe (v3).odt.bak  Blood Tithe.odt  Blood Tithe.odt.bak  README.md  Scene: The Shadows of Redgate Beach.odt  Scene: The Shadows of Redgate Beach.odt.bak  main.py  metadata.json  mkdocs.yml  pyproject.toml
docs/: index.md
includes/: abbreviations.md
notes/: .gitignore  Blood Tithe (v2): Refined Novel Outline.md  Blood Tithe - Chapter Outline.md  Character - Diana Reeves.md  Character - Philip Weiss.md  Interview: The Metaphysical Framework Behind "Black Eyes & Broken Souls".md  Novel Sequel Concept: "Blood Tithe".md  Novel Structure and Pacing Guide.md  Outline.odt.bak  README.md  Scene: Eliza's Drawings.md  Style Guide - Mick Hargraves and The Demon.md  index.md  metadata.json  outline.md
notes/app/: Dockerfile  compose.yml
notes/characters/: .meta.yml  .nav.yml  Character - Blackthon Institute.md  Character - Blackwood, Anthony.md  Character - Demons.md  Character - Diana Reeves.md  Character - Dr. Elanor Crane.md  Character - Hargraves, Liz (Mick's Sister).md  Character - Hargraves, Michael.md  Character - Hollow Men.md  Character - Judge Blackwood.md  Character - Lilaeth.md  Character - Liz Hargraves (Mick's Sister).md  (+7 more)
scripts/: extract-black-eyes.sh  extract.sh  markdown_splitter.py
site/: 404.html  Outline.odt  index.html
(+155 files in other folders)
